refactor: address latest opt-out review feedback
Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>